# FASTgrep

./: .gitignore  README.md  fastgrep.cabal
app/: Main.hs  TUI.hs
src/: Matcher.hs  Parser.hs
test/: Main.hs
tests/: tests.py  tests.rb  tests.tsx
